# agitiser-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: agent.rs  cli.rs  event.rs  lib.rs  main.rs  paths.rs  speech.rs  state.rs  template.rs
src/integrations/: claude.rs  codex.rs
tests/: integration.rs
