[package]
name = "agitiser-notify"
version = "0.1.0"
edition = "2021"
description = "Speech-dispatcher notifier for agent task completion events"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.54"
dirs = "6.0.0"
handlebars = "6.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
toml_edit = "0.22.24"
which = "7.0.2"

[dev-dependencies]
tempfile = "3"
